shell: quit on sigterm

systemd will send TERM when asking the application to terminate. by
default Qt doesn't handle this so we need an explicit signal handler to
terminate nicely

BUG: 470604